--- a/server/views/components/action-banner.njk
+++ b/server/views/components/action-banner.njk
@@ -11,20 +11,21 @@
 
 		{{ actionBanner({
 			title: "This is a title",
-			body: "This is some body copy",
+			body: "This is some body copy <a href=\"#\">with a link</a> in it",
 			cta: {
 				text: "Link text",
 				href: "/button-href",
 				modifier: "inverse"
-			}
+			},
+			closeable: true
 		}) }}
 
 		<h2>Subtle</h2>
 
 		{{ actionBanner({
 			modifier: "subtle",
-			title: "This is a title",
-			body: "This is some body copy",
+			title: "This is a title with",
+			body: "This is some body copy <a href=\"#\">with a link</a> in it",
 			cta: {
 				text: "Button text",
 				modifier: "secondary"
