Fix wrong icon in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@
 					</li>
 					<li class="social-networks__item">
 						<a target="_blank" title="Follow NICE on LinkedIn" href="https://www.linkedin.com/company-beta/788975/" rel="noopener external">
-							<span aria-hidden="true" class="icon icon--linkedin-square"></span>
+							<span aria-hidden="true" class="icon icon--linkedin-sign"></span>
 							<span class="visually-hidden">Follow NICE on LinkedIn</span>
 						</a>
 					</li>
