Ignore example content from in page nav

--- a/_includes/example.html
+++ b/_includes/example.html
@@ -1,4 +1,4 @@
-<div class="example">
+<div class="example" data-no-inpagenav>
 	<div class="example__body">
 		<h4 class="example__label example__label--inverse">{{ include.title | default: 'Example' }}</h4>
 		{{ include.body }}
