Update spacing documentation

--- a/_sass/components/_components-spacing-block.scss
+++ b/_sass/components/_components-spacing-block.scss
@@ -1,6 +1,6 @@
 /// A block for demonstrating the spacing sizes
 .spacing-block {
-	background: $colour-panel-default;
+	background: $colour-icons;
 	display: inline-block;
 	height: em($spacing-large);
 	margin: em(0 0 $spacing-x-small);
