Darken body colour slightly

--- a/src/stylesheets/settings/_settings-colours-semantic.scss
+++ b/src/stylesheets/settings/_settings-colours-semantic.scss
@@ -15,7 +15,7 @@ $colour-true-white: #fff;
 
 /// Page background colour
 /// @since 0.2.0
-$colour-body: #fafafa;
+$colour-body: #f5f5f5;
 
 /// Standard, primary body text colour
 /// @since 0.2.0
