--- a/src/components/footer/footer.njk
+++ b/src/components/footer/footer.njk
@@ -59,7 +59,7 @@
 						</li>
 						<li class="social-networks__item">
 							<a target="_blank" title="Follow NICE on LinkedIn" href="https://www.linkedin.com/company/national-institute-for-health-and-clinical-excellence">
-								<span aria-hidden="true" class="icon icon--linkedin-square"></span>
+								<span aria-hidden="true" class="icon icon--linkedin-sign"></span>
 								<span class="visually-hidden">Follow NICE on LinkedIn</span>
 							</a>
 						</li>
