Fix inverse panel example

--- a/server/views/components/typography.njk
+++ b/server/views/components/typography.njk
@@ -22,7 +22,7 @@
 
 		<h3>Inverse links</h3>
 
-		<div class="panel panel--dark">
+		<div class="panel panel--inverse">
 			<h3><a href="#">This is a heading 3</a></h3>
 			<p>
 				This is <a href="#">a link</a> in some body copy.
