--- a/src/stylesheets/typography/_typography-headings.scss
+++ b/src/stylesheets/typography/_typography-headings.scss
@@ -3,13 +3,20 @@
 ////
 
 h1,
+.h1,
 h2,
+.h2,
 h3,
+.h3,
 h4,
+.h4,
 h5,
+.h5,
 h6,
+.h6,
 .heading {
   clear: both;
+  color: $colour-headings;
   margin: 0;
   max-width: 66ch;
 }
@@ -29,6 +36,8 @@ h6,
 /// @since 0.1.0
 @mixin h1 {
   @include font(h1);
+  color: $colour-headings;
+  font-weight: 900;
 }
 
 /// Secondary heading. Used for h2 tag but can be used directly
@@ -36,6 +45,8 @@ h6,
 /// @since 0.1.0
 @mixin h2 {
   @include font(h2);
+  color: $colour-headings;
+  font-weight: 700;
 }
 
 /// Tertiary heading. Used for h3 tag but can be used directly
@@ -43,6 +54,8 @@ h6,
 /// @since 0.1.0
 @mixin h3 {
   @include font(h3);
+  color: $colour-headings;
+  font-weight: 700;
 }
 
 /// Fourth level heading. Used for h4 tag but can be used directly
@@ -50,6 +63,8 @@ h6,
 /// @since 0.1.0
 @mixin h4 {
   @include font(h4);
+  color: $colour-headings;
+  font-weight: 700;
 }
 
 /// Fifth level heading. Used for h5 tag but can be used directly
@@ -57,6 +72,8 @@ h6,
 /// @since 0.1.0
 @mixin h5 {
   @include font(h5);
+  color: $colour-headings;
+  font-weight: 700;
 }
 
 /// Sixth level heading. Used for h6 tag but can be used directly
@@ -64,6 +81,8 @@ h6,
 /// @since 0.1.0
 @mixin h6 {
   @include font(h6);
+  color: $colour-headings;
+  font-weight: 700;
 }
 
 h1,
