--- a/src/stylesheets/typography/_typography-helpers.scss
+++ b/src/stylesheets/typography/_typography-helpers.scss
@@ -101,18 +101,26 @@
 
   @if $important {
     // sass-lint:disable no-important
-    font-weight: map-get($font-map, fw) !important;
     margin-bottom: rem(map-get($font-map, mb)) !important;
     margin-top: rem(map-get($font-map, mt)) !important;
   } @else {
-    font-weight: map-get($font-map, fw);
     margin-bottom: rem(map-get($font-map, mb));
     margin-top: rem(map-get($font-map, mt));
   }
+}
+
+/// Default paragraph style
+/// @since 0.5.2
+@mixin p {
+  @include font(p);
+  font-feature-settings: 'kern', 'onum', 'liga';
+  font-weight: normal;
+  max-width: 66ch;
 }
 
 /// Lead paragraph style
 /// @since 0.2.12
 @mixin lead {
   @include font(lead);
+  font-weight: normal;
 }
