Fix headings on dark (inverse) backgrounds

--- a/server/views/components/panels.njk
+++ b/server/views/components/panels.njk
@@ -10,6 +10,7 @@
 		<h2>Default (light) panel</h2>
 
 		<div class="panel">
+			<h3>Normal panel</h3>
 			<p>
 				Some <a href="#">text</a> content
 			</p>
@@ -18,6 +19,7 @@
 		<h2>Inverse (dark) panel</h2>
 
 		<div class="panel panel--inverse">
+			<h3>Inverse panel</h3>
 			<p>
 				Some <a href="#">text</a> content
 			</p>
