--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -7,7 +7,7 @@
 .hero {
   @include links-inverse;
   background: $colour-nice-teal-2;
-  color: $colour-text-inverse;
+  color: $colour-text-inverse !important; // sass-lint:disable-line no-important
   margin: em(0 0 $spacing-large);
   overflow: hidden;
   padding: em(0 0 $spacing-large);
@@ -29,13 +29,24 @@
   // Extra supplementary links etc
   &__extra {
     @include grid-item(12, $md: 4, $loose: true);
+
+    // sass-lint:disable-block no-universal-selectors
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: $colour-text-inverse;
+    }
   }
 
   &__title {
     @include h1;
+    color: $colour-text-inverse;
   }
 
   &__intro {
     @include lead;
+    color: $colour-text-inverse;
   }
 }
