Add font size 6 back in for backwards compatability

--- a/src/stylesheets/typography/_typography-settings.scss
+++ b/src/stylesheets/typography/_typography-settings.scss
@@ -81,5 +81,11 @@ $font-sizes: (
     lh: 48,
     mb: $spacing-medium,
     mt: 0
+  ),
+  6: (
+    fs: 52,
+    lh: 56,
+    mb: $spacing-large,
+    mt: 0
   )
 );
