Update container width to use spacing, rather than percentage based

--- a/src/components/container/_container.scss
+++ b/src/components/container/_container.scss
@@ -8,6 +8,7 @@
   margin: auto;
   max-width: rem(1170px);
   width: 96%;
+  width: calc(100% - #{rem($spacing-large)});
 }
 
 /// Container, used as a wrapper around sections within a page.
