Hero updates to allow for footer and more flexible layout

--- a/src/stylesheets/settings/_settings-colours-semantic.scss
+++ b/src/stylesheets/settings/_settings-colours-semantic.scss
@@ -248,3 +248,14 @@ $colour-guidance-updated: $colour-nice-blue-3;
 /// In consultation guidance colour
 /// @since 0.3.0
 $colour-guidance-consultation: #557021;
+
+
+// HERO
+
+/// Background colour for the hero component
+/// @since 0.5.2
+$colour-hero-background: $colour-nice-teal-2;
+
+/// Colour for the border in the hero component
+/// @since 0.5.2
+$colour-hero-border: $colour-nice-teal-3;
