Move container width into its own variable

--- a/src/components/container/_container.scss
+++ b/src/components/container/_container.scss
@@ -6,7 +6,7 @@
 /// @since 0.1.0
 %container {
   margin: auto;
-  max-width: rem(1170px);
+  max-width: rem($nice-container-max-width);
   width: 96%;
   width: calc(100% - #{rem($spacing-large)});
 }
