--- a/src/stylesheets/settings/_settings-variables.scss
+++ b/src/stylesheets/settings/_settings-variables.scss
@@ -104,6 +104,10 @@ $nice-output-glyph-classes: false !default;
 /// @since 0.2.0
 $nice-responsive: true !default;
 
+/// The maximum width of the default container, in pixels
+/// @since 0.5.2
+$nice-container-max-width: 1170;
+
 
 // SASS MQ OVERRIDES
 
