--- a/src/components/container/_container.scss
+++ b/src/components/container/_container.scss
@@ -7,8 +7,8 @@
 %container {
   margin: auto;
   max-width: rem($nice-container-max-width);
-  width: 96%;
-  width: calc(100% - #{rem($spacing-large)});
+  width: 96%; // Fallback for non-calc browsers e.g. IE8, see https://caniuse.com/#feat=calc
+  width: calc(100% - #{rem($spacing-large)}); // sass-lint:disable-line no-duplicate-properties
 }
 
 /// Container, used as a wrapper around sections within a page.
