--- a/packages/nds-core/scss/core.scss
+++ b/packages/nds-core/scss/core.scss
@@ -21,7 +21,4 @@
 @import 'typography/typography';
 
 // Icons - from nice-icons module
-@import 'nice-icons';
-
-// Components
-@import '../components/components';
+//@import 'nice-icons';
