Move container styling to core

--- a/packages/nds-core/scss/grid/_grid.scss
+++ b/packages/nds-core/scss/grid/_grid.scss
@@ -2,6 +2,8 @@
 /// @group grid
 ////
 
+@import 'container';
+
 /*!
  * Grid borrowed from https://github.com/csswizardry/csswizardry-grids
  * with a different API over the top
