--- a/packages/nds-core/scss/helpers/_helpers-glyphs.scss
+++ b/packages/nds-core/scss/helpers/_helpers-glyphs.scss
@@ -67,7 +67,7 @@ $nice-glyphs: (
   .glyph {
     @each $key, $value in $nice-glyphs {
       &--#{$key} {
-        &::before {
+        &:before {
           content: unquote('\'\\#{$value}\'');
         }
       }
