--- a/packages/nds-core/scss/typography/_typography-quotations.scss
+++ b/packages/nds-core/scss/typography/_typography-quotations.scss
@@ -16,7 +16,7 @@
     color: $colour-nice-teal;
     content: get-glyph(left-double-quotation-mark);
     display: block;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
     font-size: 5rem;
     font-weight: bold;
     left: 0;
