--- a/packages/nds-core/scss/helpers/hacks/_hacks.scss
+++ b/packages/nds-core/scss/helpers/hacks/_hacks.scss
@@ -16,17 +16,12 @@
   html {
     box-sizing: border-box;
   }
-  *, *:before, *:after {
+
+  *,
+  *:before,
+  *:after {
     box-sizing: inherit;
   }
-}
-
-/// Cross browser border box
-/// @since 0.1.0
-@mixin border-box {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 /// Fix unwanted button padding in Firefox
