--- a/packages/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/packages/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -10,7 +10,6 @@ $colour-true-black: #000;
 /// @since 0.2.0
 $colour-true-white: #fff;
 
-
 // GLOBAL
 
 /// Page background colour. It's off-white in an attempt to make
@@ -39,7 +38,6 @@ $colour-text-inverse: $colour-nice-white;
 /// @since 0.2.0
 $colour-icons: $colour-nice-teal;
 
-
 // LINKS
 
 /// Link text colour
@@ -61,7 +59,6 @@ $colour-link-active: $colour-text;
 /// Link focus text colour
 /// @since 0.2.11
 $colour-link-focus-text: $colour-link;
-
 
 // INVERSE LINKS
 
@@ -85,7 +82,6 @@ $colour-link-inverse-active: $colour-link-inverse-hover;
 /// @since 0.2.9
 $colour-link-inverse-focus-text: $colour-link-inverse;
 
-
 // FOCUS
 
 /// Focus colour
@@ -95,7 +91,6 @@ $colour-focus: #0092a6;
 /// Focus colour
 /// @since 0.3.1
 $colour-focus-inverse: $colour-link-inverse;
-
 
 // CTA BUTTONS
 
@@ -111,7 +106,6 @@ $colour-btn-cta-hover: #260b2d;
 /// @since 0.2.2
 $colour-btn-cta-text: $colour-nice-white;
 
-
 // PRIMARY BUTTONS
 
 /// Primary button background colour
@@ -125,7 +119,6 @@ $colour-btn-primary-hover: $colour-nice-rich-black;
 /// Primary button text colour
 /// @since 0.2.2
 $colour-btn-primary-text: $colour-nice-white;
-
 
 // SECONDARY BUTTONS
 
@@ -141,8 +134,7 @@ $colour-btn-secondary-hover: #333;
 /// @since 0.2.2
 $colour-btn-secondary-text: $colour-nice-white;
 
-
-// LIGHT BUTTONS
+// INVERSE BUTTONS
 
 /// Inverse (light) button background colour
 /// @since 0.2.2
@@ -155,7 +147,6 @@ $colour-btn-inverse-hover: $colour-nice-grey-3;
 /// Inverse (light) button text colour
 /// @since 0.2.2
 $colour-btn-inverse-text: $colour-nice-rich-black;
-
 
 // BACKGROUNDS/BORDERS
 
@@ -174,7 +165,6 @@ $colour-panel-default-border: $colour-nice-grey-2;
 // Inverse (dark) panels background
 /// @since 0.2.0
 $colour-panel-inverse: $colour-nice-dark-grey;
-
 
 // NOTIFICATIONS/BANNERS
 
@@ -234,7 +224,6 @@ $colour-success: #3f8c5e;
 /// @since 0.2.0
 $colour-success-background: #eff7eb;
 
-
 // GUIDANCE TYPES
 
 /// New guidance colour
@@ -248,7 +237,6 @@ $colour-guidance-updated: $colour-nice-blue-3;
 /// In consultation guidance colour
 /// @since 0.3.0
 $colour-guidance-consultation: #557021;
-
 
 // HERO
 
