Fix flow errors + linting issues

--- a/packages/nds-core/scss/grid/_grid-helpers.scss
+++ b/packages/nds-core/scss/grid/_grid-helpers.scss
@@ -188,7 +188,7 @@ $sm: false,
 $md: false,
 $lg: false,
 $xl: false) {
-  @include border-box;
+  box-sizing: border-box;
   direction: ltr;
   display: inline-block;
   letter-spacing: normal;
