--- a/packages/nds-core/scss/core.scss
+++ b/packages/nds-core/scss/core.scss
@@ -21,4 +21,4 @@
 @import 'typography/typography';
 
 // Icons - from nice-icons module
-//@import 'nice-icons';
+@import '~@nice-digital/icons/dist/nice-icons';
