Add CRA for quick component building

--- a/packages/design-system/scss/nice-design-system.scss
+++ b/packages/design-system/scss/nice-design-system.scss
@@ -16,4 +16,5 @@
   '~@nice-digital/nds-phase-banner/scss/phase-banner',
   '~@nice-digital/nds-stacked-nav/scss/stacked-nav',
   '~@nice-digital/nds-tabs/scss/tabs',
-  '~@nice-digital/nds-tag/scss/tag';
+  '~@nice-digital/nds-tag/scss/tag',
+  '~@nice-digital/nds-forms/scss/forms';
