Working radio buttons

--- a/packages/nds-forms/scss/radio.scss
+++ b/packages/nds-forms/scss/radio.scss
@@ -37,6 +37,11 @@ $radio-base-size: 32px;
     top: 0;
     width: $radio-base-size;
 
+    &:disabled + label:before,
+    &:disabled + label:after {
+      opacity: .3 !important;
+    }
+
     &:checked + label:after {
       opacity: 1;
     }
