--- a/packages/dev-app/src/App.scss
+++ b/packages/dev-app/src/App.scss
@@ -1,1 +1,9 @@
 @import "~@nice-digital/nds-forms/scss/forms";
+
+main {
+  background: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+  margin: 3vw;
+  padding: 3vw;
+  position: relative;
+}
