--- a/packages/nds-forms/scss/checkbox.scss
+++ b/packages/nds-forms/scss/checkbox.scss
@@ -1,6 +1,6 @@
 @import "~@nice-digital/nds-core/scss/core";
 
-$checkbox-size: 32px;
+$checkbox-size: rem($spacing-large);
 
 .checkbox {
   @include font-size(p);
@@ -8,13 +8,16 @@ $checkbox-size: 32px;
   position: relative;
   min-height: $checkbox-size;
   margin-bottom: rem($spacing-medium);
-  padding-left: $checkbox-size * 1.4;
+  padding-left: $checkbox-size + rem($spacing-medium);
 
   &--error .checkbox__label,
   &--error .checkbox__label {
     color: $colour-error;
     &:before {
-      outline: $colour-error rem($spacing-x-small) solid;
+      @include default-error-style;
+    }
+    &:after {
+      color: $colour-nice-black;
     }
   }
 
@@ -43,9 +46,7 @@ $checkbox-size: 32px;
     opacity: 0;
 
     &:focus + .checkbox__label:before {
-      outline: 3px solid transparent;
-      outline-offset: 3px;
-      box-shadow: 0 0 0 3px $colour-border-focus;
+      @include default-focus-style;
     }
 
     &:checked + .checkbox__label:after {
@@ -69,9 +70,9 @@ $checkbox-size: 32px;
     display: block;
     margin-bottom: rem($spacing-x-small);
     cursor: pointer;
-    padding: ($checkbox-size / 8) 0;
+    padding: rem($spacing-x-small) 0;
 
-    &:before { // stylelint-disable-line
+    &:before { // outside square // stylelint-disable-line
       content: "";
       box-sizing: border-box;
       position: absolute;
@@ -79,21 +80,21 @@ $checkbox-size: 32px;
       left: 0;
       width: $checkbox-size;
       height: $checkbox-size;
-      border: 2px solid $colour-nice-black;
+      border: rem($spacing-xx-small) solid $colour-nice-black;
       background: transparent;
     }
 
-    &:after { // stylelint-disable-line
+    &:after { // inside check / tick // stylelint-disable-line
       content: "";
       position: absolute;
-      top: $checkbox-size / 3.2;
-      left: $checkbox-size / 4;
-      width: $checkbox-size / 2;
-      height: $checkbox-size / 3.2;
+      top: rem($spacing-small);
+      left: rem($spacing-small);
+      width: rem($spacing-medium);
+      height: $checkbox-size / 3; // this is the short end of the checkmark;
       transform: rotate(-45deg);
       border: solid;
-      border-width: 0 0 4px 4px;
-      border-top-color: transparent;
+      border-width: 0 0 rem($spacing-x-small) rem($spacing-x-small);
+      border-top-color: transparent; // IE11 bug  
       opacity: 0;
       background: transparent;
     }
