--- a/packages/nds-forms/scss/radio.scss
+++ b/packages/nds-forms/scss/radio.scss
@@ -1,13 +1,12 @@
 @import '~@nice-digital/nds-core/scss/core';
 
-$radio-base-size: 32px;
+$radio-base-size: rem($spacing-large);
 
-/// Radio
 .radio {
   @include clearfix;
   clear: left;
   display: block;
-  padding-left: $radio-base-size * 1.4;
+  padding-left: $radio-base-size + rem($spacing-medium);
   position: relative;
   margin-bottom: rem($spacing-small);
 
@@ -15,7 +14,7 @@ $radio-base-size: 32px;
   &--error .radio__label {
     color: $colour-error;
     &:before {
-      border: $colour-error rem($spacing-x-small) solid;
+      @include default-error-style(true);
     }
   }
 
@@ -49,7 +48,7 @@ $radio-base-size: 32px;
 
     &:focus {
       & + label:before {
-        box-shadow: 0 0 0 ($radio-base-size / 16) $colour-border-focus;
+        @include default-focus-style(true);
       }
     }
   }
@@ -60,10 +59,10 @@ $radio-base-size: 32px;
     display: block;
     margin-bottom: rem($spacing-x-small);
     cursor: pointer;
-    padding: ($radio-base-size / 8) 0;
+    padding: rem($spacing-x-small) 0;
 
     &:before { // outside circle
-      border: ($radio-base-size / 16) solid $colour-nice-black;
+      border: rem($spacing-xx-small) solid $colour-nice-black;
       border-radius: 50%;
       content: '';
       height: $radio-base-size;
@@ -77,12 +76,12 @@ $radio-base-size: 32px;
       background: $colour-nice-black;
       border-radius: 50%;
       content: '';
-      height: ($radio-base-size / 2);
-      left: ($radio-base-size / 4);
+      height: rem($spacing-medium);
+      left: rem($spacing-small);
       opacity: 0;
       position: absolute;
-      top: ($radio-base-size / 4);
-      width: ($radio-base-size / 2);
+      top: rem($spacing-small);
+      width: rem($spacing-medium);
     }
   }
 }
