--- a/templates/nice-icons.tmpl.scss
+++ b/templates/nice-icons.tmpl.scss
@@ -3,6 +3,7 @@
 ////
 
 // sass-lint:disable-all
+/* stylelint-disable */
 
 <%
 // This is a template for generating SASS for our icon font.
@@ -25,22 +26,14 @@ $${ fontBaseName }-no-cache: random(999999999);
 /// Base path for loading font files
 /// Override this in your application if your path differs.
 /// E.g. if you want to replace it off a CDN you could change this to 'http://cdn.com/fonts/'
-$nice-font-base-path: '${ relativeFontPath }' !default;
-
-@font-face {
-  font-family: "${ fontFamilyName }";
-  font-style: normal;
-  font-weight: normal;
-  src: ${ fontSrc1.replace(new RegExp(hash + "\"", "g"), "\" + $" + fontBaseName + "-no-cache").replace(/"\/fonts\//g, "$nice-font-base-path + \"") };
-  src: ${ fontSrc2.replace(new RegExp(hash + "\"", "g"), "\" + $" + fontBaseName + "-no-cache").replace(/"\/fonts\//g, "$nice-font-base-path + \"").replace(new RegExp(hash + "#", "g"), "\" + $" + fontBaseName + "-no-cache + \"#") };
-}
+$${ fontBaseName }-base-path: '${ relativeFontPath }' !default;
 
 /// Map of icon name to codepoint.
 /// This map avoids the use of 'magic strings' for codepoints throught SASS code. The map is usually not used directly - use the nice-icon function/mixin instead.
 /// Please note - the values for codepoints are not fixed and may change each time the font is re-generated.
 <% _.forEach(glyphs, function(glyph, index) { %>/// @prop {string} ${ glyph } [${ codepoints[index] }] - <span class="icon icon--${ glyph }" aria-hidden="true"></span>
 <% }); %>
-$nice-icons: (
+$${ fontBaseName }: (
   <% _.forEach(glyphs, function(glyph, index) { %>${ glyph }: '${ codepoints[index] }'<% if (index < glyphs.length - 1) { %>,
   <% } %><% }); %>
 ) !default;
@@ -48,19 +41,18 @@ $nice-icons: (
 /// Base styles required for an icon including font family etc
 /// @example
 ///   .test {
-///     @icnlude icon-base;
+///     @include ${ fontBaseName }-base;
 ///
 ///     &:before {
 ///       content: nice-icon(search);
 ///     }
 ///   }
-@mixin icon-base {
+@mixin ${ fontBaseName }-base {
   display: inline-block;
   font-family: '${ fontFamilyName }';
   font-style: normal;
   font-weight: normal;
   line-height: 1;
-  speak: none;
   text-decoration: inherit;
   text-rendering: auto;
   text-transform: none;
@@ -79,7 +71,7 @@ $nice-icons: (
 ///   }
 @mixin nice-icon($icon) {
   @if map-has-key($nice-icons, $icon) {
-    @include icon-base;
+    @include ${ fontBaseName }-base;
     content: nice-icon($icon);
   } @else {
     @error 'Icons with name #{ $icon } could not be found in the $nice-icons map';
@@ -105,20 +97,41 @@ $nice-icons: (
   }
 }
 
+@font-face {
+  font-family: "${ fontFamilyName }";
+  font-style: normal;
+  font-weight: normal;
+  src: ${ fontSrc1.replace(new RegExp(hash + "\"", "g"), "\" + $" + fontBaseName + "-no-cache").replace(/"\/fonts\//g, "$nice-font-base-path + \"") };
+  src: ${ fontSrc2.replace(new RegExp(hash + "\"", "g"), "\" + $" + fontBaseName + "-no-cache").replace(/"\/fonts\//g, "$nice-font-base-path + \"").replace(new RegExp(hash + "#", "g"), "\" + $" + fontBaseName + "-no-cache + \"#") };
+}
+
+svg.icon {
+  display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  height: 1em;
+  line-height: 1;
+  text-decoration: inherit;
+  text-rendering: auto;
+  text-transform: none;
+  vertical-align: baseline;
+  width: 1em;
+}
+
 /// Class for rendering an icon.
 /// Use with a named modifier for an icon.
 /// @example
 ///   <span class="icon icon--search" aria-hidden="true"></span>
-.icon {
-  @include icon-base;
+.icon[class*='icon--'] {
+  @include ${ fontBaseName }-base;
 
   &:before {
     display: block;
   }
+}
 
-  @each $icon, $code in $nice-icons {
-    &--#{ $icon }:before {
-      content: nice-icon($icon);
-    }
+@each $icon, $code in $nice-icons {
+  .icon--#{ $icon }:before {
+    content: nice-icon($icon);
   }
 }
